--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,16 @@ repositories {
   jcenter()
 }
 
+configurations {
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
+}
+
 dependencies {
   compile('org.springframework.boot:spring-boot-starter-web')
+  compile('org.projectlombok:lombok')
+  annotationProcessor 'org.projectlombok:lombok'
   testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
