--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
   ext {
-    springBootVersion = '2.2.2.RELEASE'
+    springBootVersion = '2.1.9.RELEASE'
   }
   repositories {
     mavenCentral()
@@ -21,19 +21,10 @@ repositories {
   jcenter()
 }
 
-configurations {
-  compileOnly {
-    extendsFrom annotationProcessor
-  }
-}
-
 dependencies {
   compile('org.springframework.boot:spring-boot-starter-web')
+  compile('org.springframework.boot:spring-boot-starter-data-jpa')
+  compile('com.h2database:h2')
   compile('org.projectlombok:lombok')
-  annotationProcessor 'org.projectlombok:lombok'
   testCompile('org.springframework.boot:spring-boot-starter-test')
-}
-
-test {
-  useJUnitPlatform()
 }
