--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
   compile('org.springframework.boot:spring-boot-starter-web')
+  compile('org.springframework.boot:spring-boot-starter-mustache')
   compile('org.springframework.boot:spring-boot-starter-data-jpa')
   compile('com.h2database:h2')
   compile('org.projectlombok:lombok')
