--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ dependencies {
   compile('com.h2database:h2')
   compile('org.projectlombok:lombok')
   testCompile('org.springframework.boot:spring-boot-starter-test')
+  testCompile('org.springframework.security:spring-security-test')
 }
