--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,13 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r springboot2-webservice *
-  - mkdir -p deploy
-  - mv springboot2-webservice.zip deploy/springboot2-webservice.zip
+  - mkdir -p deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd build-deploy && zip -r before-deploy # before-deploy로 이동 후 전체 압축(-r)
+  - cd ../ && mkdir -p deploy # 상위 디렉토리 이동후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/springboot2-webservice.zip # deploy로 zip파일 이동
 
 deploy:
   - provider: s3
