--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
+group 'io.namjune'
+version '1.0.1-'+new Date().format("yyyyMMddHHmmss")
+sourceCompatibility = 1.8
+
 repositories {
   mavenCentral()
   jcenter()
